Fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ p {
   width: 100%;
   max-width: 50em;
   position: absolute;
-  bottom: 0;
+  bottom: 1rem;
   left: 50%;
   transform: translateX(-50%);
   padding-left: 16px;
